<resources>

    <!-- App name -->
    <string name="app_name">Contacts+</string>

    <!-- Image descriptions -->
    <string name="no_favourite_image_description">No favourites image</string>
    <string name="user_avatar_description">User avatar</string>
    <string name="splash_screen_image_description">Splash screen image</string>
    <string name="no_contacts_image_description">No contacts image</string>

    <!-- contact_item static texts -->
    <string name="mobile_number_static_text">Mobile:</string>
    <string name="home_number_static_text">Home:</string>
    <string name="office_number_static_text">Office:</string>
    <string name="email_static_text">Email:</string>
    <string name="address_static_text">Address:</string>

    <!-- Error view texts -->
    <string name="no_favourite_message">No contact in your favourites list</string>
    <string name="no_contacts_message">No contact available</string>
    <string name="contacts_error_message">Oops, something went wrong whilst retrieving contacts.
        Please try again&#8230;</string>
    <string name="error_view_click_to_reload_text">Reload</string>

    <!-- Progress dialog texts -->
    <string name="progress_dialog_title">Please wait</string>
    <string name="progress_dialog_content">Loading…</string>

    <!-- Snackbar texts -->
    <string name="added_to_favorites_snackbar">Contact added to favorites</string>
    <string name="undo_message_snackbar">Undo</string>
    <string name="removed_from_favourites_snackbar">Contact removed from favourites</string>

    <!-- Permission rationale message -->
    <string name="permission_rationale_message">You need to allow access to your phone in order to
        be able to call.
    </string>

</resources>
